<resources>
    <string name="app_name">田间灌溉</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- xlistview  start -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="ip">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;IP</string>
    <string name="port">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;端口</string>
    <string name="up_timer">&#160;&#160;&#160;&#160;上报间隔</string>
    <string name="up_timer_hint">只能设置60或者120分钟</string>
    <string name="ccid">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;CCID</string>
    <string name="apn">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;APN</string>
    <string name="tapcount">&#160;&#160;&#160;&#160;阀门数量</string>
    <string name="sqycount">墒情仪数量</string>
    <string name="nettime">&#160;&#160;&#160;&#160;网关时间</string>
    <string name="netvoltage">&#160;&#160;&#160;&#160;电池电压</string>
    <string name="signallevel">&#160;&#160;&#160;&#160;信号强度</string>
    <string name="netversion">&#160;&#160;&#160;&#160;程序版本</string>
    <string name="valvenumber">阀门编号：</string>

    <!--工具类下载 -->
    <string name="update_app_model_error">下载失败(点击浏览器下载)</string>
    <string name="update_app_model_prepare">准备下载</string>
    <string name="update_app_model_progress">正在下载 %1$d%2$s</string>
    <string name="update_app_model_success">下载成功(点击安装)</string>

</resources>


