<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xsyj.irrigation.NetSetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="8dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="@dimen/dp_8"
            android:onClick="back"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="网关参数设置"
            android:textColor="@color/font_white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_net_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_8"
            android:text="提交"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
             />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_8"
        android:paddingRight="@dimen/dp_8"
        android:paddingTop="@dimen/dp_4"
        android:paddingBottom="@dimen/dp_4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="网关工作参数"
                android:textSize="@dimen/dp_20"
                android:textColor="@android:color/black"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textSize="@dimen/sp_18"
                />
            <EditText
                android:id="@+id/et_net_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="如:192.168.3.33"
                android:textColorHint="@color/Light_gray"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textSize="@dimen/sp_18"
                />
            <EditText
                android:id="@+id/et_net_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="如:8080"
                android:textColorHint="@color/Light_gray"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_timer"
                android:textSize="@dimen/sp_18"
                />
            <EditText
                android:id="@+id/et_net_uptimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/up_timer_hint"
                android:textColorHint="@color/Light_gray"
                android:gravity="center"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ccid"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_ccid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apn"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_apn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tapcount"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_tapcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sqycount"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_sqycount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nettime"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_nettime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/netvoltage"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_netvoltage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signallevel"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_signallevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/netversion"
                    android:textSize="@dimen/sp_18"
                    />
                <TextView
                    android:id="@+id/et_net_netversion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/up_timer_hint"
                    android:textColorHint="@color/Light_gray"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
